[package]
authors = ["Christian Meissl <meissl.christian@gmail.com>"]
description = "Gstreamer wlr-screencopy src"
edition = "2021"
name = "gst-plugin-wlr-screencopy"
repository = "https://github.com/cmeissl/gst-wlr-screencopy-src"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "gstwlrscreencopy"
path = "src/lib.rs"

[dependencies]
drm-fourcc = "2.2"
gbm = "0.11"
gstreamer = {version = "0.20", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators", features = ["v1_18"]}
gstreamer-allocators = {version = "0.20", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators"}
gstreamer-base = {version = "0.20", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators"}
gstreamer-base-sys = {version = "0.20", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators"}
gstreamer-sys = {version = "0.20", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators"}
gstreamer-video = {version = "0.20", git = "https://gitlab.freedesktop.org/cmeissl/gstreamer-rs.git", branch = "allow_subclass_fd_allocators", features = ["v1_18"]}
memfd = "0.6"
nix = "0.26"
once_cell = "1.0"
wayland-client = "0.30"
wayland-protocols = {version = "0.30", features = ["client", "unstable"]}
wayland-protocols-wlr = {version = "0.1", features = ["client"]}
dma-heap = "0.2"

[build-dependencies]
gst-plugin-version-helper = "0.7"

[features]
capi = ["gstreamer/v1_18"]
doc = ["gstreamer/v1_18"]
static = []

[package.metadata.capi]
min_version = "0.8.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
